<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Emergencia"
    android:background="@drawable/degradado">

    <TextView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/sgalert"
        android:fontFamily="@font/fredokavariablefontwdthwght"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredokavariablefontwdthwght"
        android:text="@string/n_meros_de_emergencia"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/marca"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAtrasMenu"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/x"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/myTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bomberos"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="18sp"
            />


        <Button
            android:id="@+id/llamarBomberos"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/_132"
            android:textColor="@color/black"
            android:backgroundTint="@color/lightgrey"/>

    </TableLayout>

    <TableLayout
        android:id="@+id/myTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@color/white"
        android:stretchColumns="1"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextView1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ambulancia"
            android:textAlignment="center"
            android:textSize="18sp" />


        <Button
            android:id="@+id/llamarAmbulancia"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_131"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:backgroundTint="@color/lightgrey"/>

    </TableLayout>

    <TableLayout
        android:id="@+id/myTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@color/white"
        android:stretchColumns="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/myTextView3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carabineros"
            android:textAlignment="center"
            android:textSize="18sp" />


        <Button
            android:id="@+id/llamarPolicia"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_133"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:backgroundTint="@color/lightgrey"/>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>